ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: react-chat-ingress-deployment
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - '127.0.0.1'
    rules:
        - http:
              paths:
                  - path: /stream
                    pathType: Prefix
                    backend:
                        service:
                            name: react-chat-node-service
                            port:
                                number: 80
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: react-chat-service
                            port:
                                number: 80
